tests/neg/i17738-toplevel-infix.check
-- [E156] Syntax Error: tests/neg/i17738-toplevel-infix.scala:14:10 ----------------------------------------------------
14 |infix val toplevelVal = ??? // error
   |          ^
   |          Modifier infix is not allowed for this definition
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | A top-level value cannot be infix.
    --------------------------------------------------------------------------------------------------------------------
-- [E156] Syntax Error: tests/neg/i17738-toplevel-infix.scala:15:10 ----------------------------------------------------
15 |infix var toplevelVar = ??? // error
   |          ^
   |          Modifier infix is not allowed for this definition
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | A top-level variable cannot be infix.
    --------------------------------------------------------------------------------------------------------------------
-- [E156] Syntax Error: tests/neg/i17738-toplevel-infix.scala:16:10 ----------------------------------------------------
16 |infix def toplevelDef = ??? // error
   |          ^
   |          Modifier infix is not allowed for this definition
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | A top-level method cannot be infix.
    --------------------------------------------------------------------------------------------------------------------
-- [E156] Syntax Error: tests/neg/i17738-toplevel-infix.scala:17:12 ----------------------------------------------------
17 |infix given toplevelGiven: Int = ??? // error
   |            ^
   |            Modifier infix is not allowed for this definition
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | A top-level given instance cannot be infix.
    --------------------------------------------------------------------------------------------------------------------
-- [E156] Syntax Error: tests/neg/i17738-toplevel-infix.scala:18:19 ----------------------------------------------------
18 |infix implicit val toplevelImplicit: Int = ??? // error
   |                   ^
   |                   Modifier infix is not allowed for this definition
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | A top-level value cannot be infix.
    --------------------------------------------------------------------------------------------------------------------
